--- a/_sources/coding/Intro to Python/Printing_and_formatting_statements.ipynb
+++ b/_sources/coding/Intro to Python/Printing_and_formatting_statements.ipynb
@@ -280,10 +280,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 5,
+   "metadata": {
+    "tags": [
+     "hide-cell"
+    ]
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Veni vidi vici\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Veni vidi vici\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -295,19 +309,10 @@
     "\n",
     "Second line\n",
     "\n",
-    "Third line\n",
-    "\n",
-    "         BOOM!\n",
+    "&emsp; BOOM!\n",
     "    \n",
     "**HINT**: There is a '\\t' character which works like tab"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -335,15 +340,16 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "<pre>\n",
-    "     /\\  \n",
-    "    /  \\\n",
-    "   /    \\  \n",
-    "  /      \\  \n",
-    "  --------"
+    "#     /\\  \n",
+    "#    /  \\\n",
+    "#   /    \\  \n",
+    "#  /      \\  \n",
+    "#  --------"
    ]
   },
   {
@@ -389,9 +395,17 @@
     "        -`------/`--' /\n",
     "                \\___-'\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -407,7 +421,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
