--- a/_sources/mathematics/calculus/Vector_calculus.ipynb
+++ b/_sources/mathematics/calculus/Vector_calculus.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(vector_calculus)=\n",
     "# Vector calculus\n",
     "```{index} Vector calculus\n",
     "```\n",
