--- a/_sources/mathematics/complex analysis/complex_plane.ipynb
+++ b/_sources/mathematics/complex analysis/complex_plane.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(complex_plane)=\n",
     "# Complex plane\n",
     "\n",
     "```{index} Complex plane\n",
@@ -236,7 +237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
