--- a/_sources/mathematics/complex analysis/holomorphic_functions.ipynb
+++ b/_sources/mathematics/complex analysis/holomorphic_functions.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "```{index} Holomorphic functions\n",
     "```\n",
-    "\n",
+    "(holomorphic_functions)=\n",
     "# Holomorphic functions\n",
     "\n",
     "(comp_diff)=\n",
@@ -180,7 +180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
