--- a/_sources/mathematics/linear_algebra/Eigenvalues_and_eigenvectors.ipynb
+++ b/_sources/mathematics/linear_algebra/Eigenvalues_and_eigenvectors.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(linalg_eigen)=\n",
     "# Eigenvalues and eigenvectors\n",
     "\n",
     "To introduce eigenvalues and eigenvectors, let us begin with an example of matrix-vector multiplication. Consider the following square matrix $A \\in \\mathbb{R}^{2 \\times 2}$ multiplying a vector $\\mathbf{u}$:\n",
@@ -485,7 +486,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
