--- a/_sources/mathematics/linear_algebra/Linear_Systems.ipynb
+++ b/_sources/mathematics/linear_algebra/Linear_Systems.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(linalg_linear_systems)=\n",
     "# Solving systems of linear equations\n",
     "\n",
     "Consider a general system of $m$ linear equations with $n$ unknowns (variables):\n",
@@ -682,7 +683,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
