--- a/_sources/mathematics/linear_algebra/Theory.ipynb
+++ b/_sources/mathematics/linear_algebra/Theory.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(linalg_theory)=\n",
     "# Theory\n",
     "\n",
     "# Vector spaces\n",
@@ -497,7 +498,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
