--- a/_sources/mathematics/mathematical_notation/Big_O_notation.ipynb
+++ b/_sources/mathematics/mathematical_notation/Big_O_notation.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "toc": true
-   },
-   "source": [
-    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Introduction-and-notation\" data-toc-modified-id=\"Introduction-and-notation-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Introduction and notation</a></span></li><li><span><a href=\"#Mathematical-explanation\" data-toc-modified-id=\"Mathematical-explanation-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Mathematical explanation</a></span><ul class=\"toc-item\"><li><span><a href=\"#Example\" data-toc-modified-id=\"Example-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Example</a></span></li></ul></li><li><span><a href=\"#Use-in-Computer/Computational-Science\" data-toc-modified-id=\"Use-in-Computer/Computational-Science-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Use in Computer/Computational Science</a></span></li></ul></div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(big_o_notation)=\n",
     "# Big O notation\n",
     "\n",
     "## Introduction and notation\n",
