--- a/_sources/mathematics/numerical_methods/Timestepping_an_ODE.ipynb
+++ b/_sources/mathematics/numerical_methods/Timestepping_an_ODE.ipynb
@@ -2,29 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "toc": true
-   },
-   "source": [
-    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#What-do-we-mean-by-timestepping?\" data-toc-modified-id=\"What-do-we-mean-by-timestepping?-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>What do we mean by timestepping?</a></span></li><li><span><a href=\"#Deriving-the-forward-Euler-scheme-from-Taylor-series\" data-toc-modified-id=\"Deriving-the-forward-Euler-scheme-from-Taylor-series-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Deriving the forward Euler scheme from Taylor series</a></span></li></ul></div>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib inline\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(timestepping_ode)=\n",
     "# Solving (or \"timestepping\") an ordinary differential equation (ODE)\n",
     "\n",
     "## What do we mean by timestepping?\n",
@@ -57,7 +37,7 @@
     "\n",
     "$y$ is called the *dependent variable* and $t$ the *dependent variable*.\n",
     "\n",
-    "[NB. in the case where $y$ is multi-dimensional - a vector of unknowns/dependent variables - we would talk about a *system of ODEs*. For the case where there are more than one independent variables then we need to start thinking about *partial differential equations (PDEs)*, covered later in this module and in ACSE-3].\n",
+    "[NB. in the case where $y$ is multi-dimensional - a vector of unknowns/dependent variables - we would talk about a *system of ODEs*. For the case where there are more than one independent variables then we need to start thinking about *partial differential equations (PDEs)*].\n",
     "\n",
     "For example\n",
     "\n",
@@ -117,6 +97,17 @@
     "$$y(0)=1$$\n",
     "\n",
     "and see what one step of the forward Euler method does, we will assume that we start at some $t$ from the exact solution at that time, i.e. the starting point indicated by the red dot in the following image is on the exact solution (black) line."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -291,7 +282,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.3"
   },
   "toc": {
    "base_numbering": 1,
