--- a/_sources/mathematics/sets and functions/composition_and_inverse.ipynb
+++ b/_sources/mathematics/sets and functions/composition_and_inverse.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(composition_and_inverse)=\n",
     "# Composition and Inverse Functions\n",
     "\n",
     "## Injection, Surjection, Bijection\n",
@@ -129,7 +130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
