--- a/_sources/mathematics/sets and functions/elementary_functions_1.ipynb
+++ b/_sources/mathematics/sets and functions/elementary_functions_1.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(elem_func1)=\n",
     "# Elementary functions 1\n",
     "\n",
     "In this notebook we define some of the most common functions in general mathematics. Readers might be familiar with most of this content from school, but it will serve as a nice transition point towards more rigorous sections. This notebook should also serve as a small collection of examples for previous notebooks in this section."
@@ -527,7 +528,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
