--- a/_sources/mathematics/sets and functions/elementary_functions_2.ipynb
+++ b/_sources/mathematics/sets and functions/elementary_functions_2.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(elem_func2)=\n",
     "# Elementary functions 2\n",
     "\n",
     "Now that we know what an inverse function is, let us think about the inverse functions of elementary functions we explored in a previous notebook.\n",
@@ -416,7 +417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
