--- a/_sources/mathematics/sets and functions/logic.ipynb
+++ b/_sources/mathematics/sets and functions/logic.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(logic)=\n",
     "# Logic and proof\n",
     "\n",
     "## Logic symbols"
@@ -104,7 +105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
