--- a/_sources/mathematics/sets and functions/sets.ipynb
+++ b/_sources/mathematics/sets and functions/sets.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(sets)=\n",
     "# Sets\n",
     "\n",
     "```{index} Sets (mathematics)\n",
@@ -137,7 +138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
