--- a/_sources/mathematics/statistics/Statistics_for_Geoscientists.ipynb
+++ b/_sources/mathematics/statistics/Statistics_for_Geoscientists.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(stats_basic)=\n",
     "# Introduction to statistics for Geoscientists\n",
     "\n",
     "``` {index} Statistics: basics\n",
