--- a/_sources/coding/Intro to Python/11_Functions.ipynb
+++ b/_sources/coding/Intro to Python/11_Functions.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(functions)=\n",
+    "(functions_python)=\n",
     "# Creating custom functions\n",
     "``` {index} Creating functions\n",
     "```\n",
