--- a/_sources/coding/Intro to Python/17_Matplotlib.ipynb
+++ b/_sources/coding/Intro to Python/17_Matplotlib.ipynb
@@ -8,6 +8,8 @@
     "# Plotting data with Matplotlib\n",
     "``` {index} Matplotlib plotting\n",
     "```\n",
+    "``` {thebe-button} Tun on live code\n",
+    "```\n",
     "[Matplotlib](https://matplotlib.org/) is a commonly used Python library for plotting data. Matplotlib functions are not built-in so we need to import it every time we want to plot something. The convention is to import _matplotlib.pyplot_ as _plt_, however, any prefix can be used:"
    ]
   },
