--- a/_sources/coding/Intro to Python/10_Importing.ipynb
+++ b/_sources/coding/Intro to Python/10_Importing.ipynb
@@ -156,6 +156,41 @@
     "os.chdir(r'C:\\Users\\StudentShapers\\Desktop')\n",
     "import my_module"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(importing_exercises)=\n",
+    "## Exercises\n",
+    "------------\n",
+    "\n",
+    "* **Choose your function!** Mike decides to play a bit with Python functional interface and module importing, he creates a strange list:\n",
+    "\n",
+    "        f = [math.sin, math.cos,math.tan, math.log, random.randrange]\n",
+    "        \n",
+    "He wants to create a program which will take (at random) a function from the list and apply in to the number \\\\(a\\\\). The process should be repeated \\\\(n\\\\) times. Help Mike!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{admonition} Anwser\n",
+    ":class: dropdown\n",
+    "\n",
+    "    import math\n",
+    "    import random\n",
+    "    \n",
+    "    f = [math.sin, math.cos, math.tan, math.log, random.randrange]\n",
+    "\n",
+    "    a = 4\n",
+    "    n = 10\n",
+    "    for i in range(n):\n",
+    "        print(f[random.randint(0,len(f)-1)](a))       \n",
+    "        \n",
+    "```"
+   ]
   }
  ],
  "metadata": {
@@ -174,7 +209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
