--- a/_sources/coding/Intro to Python/15_Flow_control_statements.ipynb
+++ b/_sources/coding/Intro to Python/15_Flow_control_statements.ipynb
@@ -118,6 +118,63 @@
     "        \n",
     "    print(i)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(flow_control_statements_exercises)=\n",
+    "## Exercises\n",
+    "-----------------\n",
+    "\n",
+    "* **Floods** You are in charge of providing a software which will detect possible floods. You are given a time series of water levels (a list of ```int```) and a critical level (an ```int```). If water level rises, you should print ```1```, if it falls print ```-1```. If the level stays the same, the programme should do nothing. As soon as the detection is above the critical level, terminate the programme. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "water_level = [0,1,1,2,3,4,5,3,2,4,7,8]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{admonition} Anwser\n",
+    ":class: dropdown\n",
+    "\n",
+    "    water_level = [0,1,1,2,1,4,5,3,2,4,7,8]\n",
+    "\n",
+    "    critical_level = 4\n",
+    "    prev_level = water_level[0]\n",
+    "\n",
+    "    for i in water_level:\n",
+    "\n",
+    "        if i > critical_level: \n",
+    "            print(\"Flood!\")\n",
+    "            break\n",
+    "\n",
+    "        if prev_level == i:\n",
+    "            continue\n",
+    "        elif prev_level < i:\n",
+    "            print(\"1\")\n",
+    "        else:\n",
+    "            print(\"-1\")\n",
+    "\n",
+    "        prev_level = i\n",
+    "        \n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -136,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
